fix: changing overflow-x none

--- a/app/components/commons/Navbar.module.css
+++ b/app/components/commons/Navbar.module.css
@@ -1,6 +1,5 @@
 .navbar {
     padding: 0rem 8rem;
-    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -33,6 +32,10 @@
 
 @media screen and (max-width: 700px) {
     .navbar {
-        padding: 0rem 1rem;
+        padding: 0rem 0rem;
+    }
+
+    .navbar__title {
+        font-size: 1rem;
     }
 }
