--- a/app/components/home/Banner.module.css
+++ b/app/components/home/Banner.module.css
@@ -7,6 +7,7 @@
     left: 0;
     z-index: 40 !important;
     overflow: visible;
+    overflow-x: hidden;
 }
 
 .banner__image {
@@ -52,6 +53,8 @@
 
 .banner__picture {
     height: 26rem;
+    object-fit: contain;
+    display: block;
 }
 
 .banner__line01 {
@@ -98,6 +101,8 @@
     .banner__picture {
         position: relative;
         z-index: 47 !important;
+        object-fit: contain;
+        display: block;
     }
 
     .banner__circles {
