--- a/app/components/home/Projects.module.css
+++ b/app/components/home/Projects.module.css
@@ -13,7 +13,7 @@
 
 .projects__header {
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 }
@@ -21,6 +21,6 @@
 .projects__line {
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
