--- a/app/components/home/Publications.module.css
+++ b/app/components/home/Publications.module.css
@@ -8,6 +8,6 @@
 
 .publications__line {
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
