--- a/app/components/home/about/Timeline.module.css
+++ b/app/components/home/about/Timeline.module.css
@@ -2,8 +2,15 @@
     padding: 2rem 0rem;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    gap: 2rem;
     position: relative;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
+}
+
+.timeline::-webkit-scrollbar {
+    display: none;
 }
 
 .timeline::before {
@@ -11,17 +18,40 @@
     position: absolute;
     top: 74%;
     left: 5%;
-    width: 95%;
+    width: 100%;
     height: 1px;
     background-color: var(--font-color);
     z-index: 0;
 }
 
-
 .timeline__section {
+    min-width: 20%;
+    flex-shrink: 0;
+    scroll-snap-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     z-index: 1;
+}
+
+@media (min-width: 1570px) {
+    .timeline {
+        overflow-x: unset;
+        justify-content: space-between;
+        scroll-snap-type: none;
+    }
+
+    .timeline__section {
+        min-width: auto;
+        scroll-snap-align: unset;
+    }
+
+
+}
+
+@media (max-width: 1570px) {
+    .timeline::before {
+        width: 100vw;
+    }
 }
